--- a/src/styles/Investment/Investment.css
+++ b/src/styles/Investment/Investment.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: white;
 }
 
 .investmentPage>h1 {
