--- a/src/styles/Home/Nav/Navlater.css
+++ b/src/styles/Home/Nav/Navlater.css
@@ -38,6 +38,7 @@
 }
 
 .nav2button {
+    cursor: pointer;
     background-color: transparent !important;
     padding: 0 !important;
     border: none !important;
