--- a/src/styles/Home/Intro/Intro800.css
+++ b/src/styles/Home/Intro/Intro800.css
@@ -3,18 +3,20 @@
         width: 90%;
     }
 
-    .landing-page{
+    .landing-page {
         margin-top: 3rem;
+        padding-top: 2vh;
 
     }
+
     .con1 {
         width: 100%;
         /* height: 85vh; */
         height: max-content;
         padding: 2rem 0;
-        background: url('/public/heroimage.png');
+        /* background: url('/public/heroimage.png');
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: cover; */
         display: flex;
         justify-content: center;
         padding-left: 1rem;
@@ -23,6 +25,17 @@
         gap: 35px;
 
     }
+
+    .con1 img {
+        
+        position: absolute;
+        left: 0;
+        top: 0;
+        object-fit: cover;
+        height: 100%;
+        width: 100%;
+    }
+
 
     .bottom-left .topText {
         font-size: 20px;
@@ -35,11 +48,13 @@
 
     .bottom-left .bottomText {
 
-        font-size: 15px;
+        font-size: 14px;
         font-weight: 500;
         line-height: 15px;
         letter-spacing: 0em;
         text-align: left;
+        color: rgb(72, 71, 71);
+        
 
     }
 
@@ -56,6 +71,7 @@
 
     .heading-btns button {
         padding: 7px 17px;
+        border-radius: 7px;
     }
 
     .container2 {
@@ -255,9 +271,10 @@
         flex-wrap: wrap;
     }
 
-    .social{
+    .social {
         margin-top: 16px;
     }
+
     .social img {
         height: 40px;
         width: 40px;
@@ -290,4 +307,10 @@
 
     }
 
+}
+
+@media screen and (width<600px) {
+    .landing-page {
+        padding-top: 1vh;
+    }
 }
