--- a/src/styles/Home/Nav/Nav.css
+++ b/src/styles/Home/Nav/Nav.css
@@ -1,11 +1,16 @@
 .navbar {
     height: max-content;
-    width: 100svw;
+    width: 100vw;
     display: flex;
     padding: 0 7rem;
     justify-content: space-between;
     align-items: center;
     background-color: white;
+    position: fixed;
+    top: 0;
+    z-index: 999;
+    left: 0;
+    border-bottom: 1px solid rgb(222, 222, 222);
 }
 
 .login {
@@ -50,6 +55,9 @@
     gap:1.25rem;
     align-items: center;
     
+}
+.logo img{
+    height: 80px;
 }
 @media screen and (width<900px) {
     .login{
