--- a/src/styles/Home/Nav/Nav800.css
+++ b/src/styles/Home/Nav/Nav800.css
@@ -4,15 +4,16 @@
         position: fixed;
         top: 0;
         right: 0;
+        left: unset;
         background-color: white;
-        height: 100svh;
+        height: 100vh;
         width: 50svw;
         box-shadow: 0px 0px 5px black;
-        transition: 500ms ease-in-out;
+        transition: 250ms ease-in-out;
         flex-direction: column;
         justify-content: flex-start;
-        transform: translateX(100vw);
-        z-index: 900;
+        transform: translateX(50vw);
+        z-index: 1000;
         padding: 0 0 !important;
     }
 
