--- a/src/styles/Login/Login.css
+++ b/src/styles/Login/Login.css
@@ -1,20 +1,34 @@
 .loginContainer {
     width: 100vw;
     height: max-content;
-    padding: 2.5rem 0;
-    background: url('/public/jjh.png');
+    height: 100vh;
+    /* padding: 2.5rem 0 9.1rem 0; */
+    /* background: url('/public/jjh.png'); */
     display: flex;
     /* background-color: rgb(68, 67, 67); */
     flex-direction: column;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    /* background-size: cover; */
+    /* background-position: center; */
+    /* background-repeat: no-repeat; */
+    position: relative;
+}
+
+.loginBack {
+    filter: brightness(0.5);
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
 
 .loginContainerBottom {
+    position: relative;
     padding: 5rem 0;
     display: flex;
     flex-wrap: wrap;
+    margin-top: 5rem;
     justify-content: space-around;
     align-items: center;
 }
@@ -48,6 +62,7 @@
 .loginleft p {
     width: fit-content;
     text-align: left;
+
 }
 
 .loginleft {
@@ -92,6 +107,10 @@
     gap: 0.5rem;
 }
 
+label {
+    color: white;
+}
+
 .loginright form .inp1 {
     border: none;
     padding: 15px 10px 15px 20px;
@@ -101,12 +120,19 @@
     width: 275px;
     outline: none;
 
-    font-size: 18px;
+    font-size: 20px;
     text-align: center;
     line-height: 36px;
 
 
 }
+
+
+
+.loginright form .inp1:valid {
+    background-color: #ffffff7c;
+}
+
 
 .inp1::placeholder {
     color: white;
