--- a/src/styles/Login/Login800.css
+++ b/src/styles/Login/Login800.css
@@ -1,14 +1,22 @@
 @media screen and (width<=800px) {
     .loginContainer {
         background: none;
-        height: 100dvh;
+        height: 100vh;
         background-color: white;
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: flex-start;
+        padding-top: 1rem;
         align-items: center;
+        
     }
 
+    label{
+        color: black;
+    }
+    .loginBack{
+        display: none;
+    }
     .loginContainer h1 {
         font-family: Montserrat;
         font-size: 18px;
@@ -94,6 +102,7 @@
 
     .loginContainerBottom {
         padding: 0;
+        margin-top: 2rem;
         min-width: 90%;
     }
 
@@ -111,7 +120,7 @@
         line-height: 27px;
         letter-spacing: 0em;
         text-align: center;
-        margin-top: 25px;
+        margin-top: 15px;
 
     }
 }
