--- a/src/styles/Contact/Contact.css
+++ b/src/styles/Contact/Contact.css
@@ -1,6 +1,6 @@
 .contactSection {
-    height: 93dvh;
-    /* padding: 5rem 0; */
+    height: 100vh;
+    padding-top: 10rem;
     width: 100%;
 
 
